Active Shape Key Lock cause Blender crash while using Mesh Filter, Move, Rotate, Scale, Transform tools. #79622

Closed
opened 2020-08-07 14:26:29 +02:00 by B-Lee · 7 comments

Operating system: Microsoft Windows 10 Pro (Version 10.0.17134 Build 17134)
Graphics card: NVIDIA GeForce GTX 1060 (GeForce Game Ready Driver Version 451.67)

Blender 2.83.4 LTS, Factory setting and Factory Preferences.

Under condition of:

  • Adding a shape key and toggle Shape Key Lock on. In Sculpt mode, using Mesh Filter, Move, Rotate, Scale or Transform tools will cause Blender crash.
  • The video show an example of using Mesh Filter tool to make Blender crash. This will happen when Shape Key Lock is toggle on.

Desktop 2020.08.07 - 19.57.36.09.mp4

Operating system: Microsoft Windows 10 Pro (Version 10.0.17134 Build 17134) Graphics card: NVIDIA GeForce GTX 1060 (GeForce Game Ready Driver Version 451.67) Blender 2.83.4 LTS, Factory setting and Factory Preferences. Under condition of: - Adding a shape key and toggle Shape Key Lock on. In Sculpt mode, using Mesh Filter, Move, Rotate, Scale or Transform tools will cause Blender crash. - The video show an example of using Mesh Filter tool to make Blender crash. This will happen when Shape Key Lock is toggle on. [Desktop 2020.08.07 - 19.57.36.09.mp4](https://archive.blender.org/developer/F8755563/Desktop_2020.08.07_-_19.57.36.09.mp4)
Author

Added subscriber: @toki46-3

Added subscriber: @toki46-3
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Member

SculptSession->orig_cos are NULL here

1 __memmove_avx_unaligned_erms                           0x7ffff79335f3 
2 SCULPT_flush_stroke_deform   sculpt.c             5919 0x419743b      
3 sculpt_mesh_filter_modal     sculpt_filter_mesh.c 531  0x41b7150      
4 wm_handler_operator_call     wm_event_system.c    2018 0x36bc170      
5 wm_handlers_do_intern        wm_event_system.c    2802 0x36be572      
6 wm_handlers_do               wm_event_system.c    2850 0x36be6a0      
7 wm_event_do_handlers         wm_event_system.c    3275 0x36bf980      
8 WM_main                      wm.c                 475  0x36b424f      
9 main                         creator.c            546  0x327e593      
SculptSession->orig_cos are NULL here ``` 1 __memmove_avx_unaligned_erms 0x7ffff79335f3 2 SCULPT_flush_stroke_deform sculpt.c 5919 0x419743b 3 sculpt_mesh_filter_modal sculpt_filter_mesh.c 531 0x41b7150 4 wm_handler_operator_call wm_event_system.c 2018 0x36bc170 5 wm_handlers_do_intern wm_event_system.c 2802 0x36be572 6 wm_handlers_do wm_event_system.c 2850 0x36be6a0 7 wm_event_do_handlers wm_event_system.c 3275 0x36bf980 8 WM_main wm.c 475 0x36b424f 9 main creator.c 546 0x327e593 ```

This issue was referenced by 21118fb610

This issue was referenced by 21118fb610c2cf693b2884086f3d5c1fe5183ea4
Philipp Oeser self-assigned this 2020-08-07 18:31:04 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79622
No description provided.